crates/weft-snapshots/tests/snapshots/solid-tsx/example-list.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-list as solid-tsx
---
import { For, Show } from "solid-js";

export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v: unknown): any[] {
  return Array.isArray(v) ? v : [];
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Todos">
      <ul data-weft-id="todos" data-state="ready">
        <Show when={!(_list(props.data?.todos).length > 0)} fallback={(
          <>
            <For each={_list(props.data?.todos)}>
              {(todo, _i0) => (
                <>
                  <li data-weft-id={"todo-item[" + _i0() + "]"}>
                    <div data-weft-id={"todo-title[" + _i0() + "]"}>
                      {!(_text(todo?.title).trim() === "") ? _squash(_text(todo?.title)) : ""}
                    </div>
                  </li>
                </>
              )}
            </For>
          </>
        )}>
          <li role="none" data-weft-slot="empty">
            <div data-weft-id="todos-empty" data-tone="muted">Nothing to do.</div>
          </li>
        </Show>
      </ul>
    </main>
  );
}
