crates/weft-snapshots/tests/snapshots/solid-tsx/example-model.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-model as solid-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Showroom">
      <model-viewer data-weft-id="chair" aria-label="A wooden armchair" role="img" alt="A wooden armchair" src="assets/chair.glb" ios-src="assets/chair.usdz" camera-controls="" interaction-prompt="none">
        <img slot="poster" alt="" src="assets/chair.png" />
      </model-viewer>
    </main>
  );
}
