crates/weft-snapshots/tests/snapshots/solid-tsx/example-row.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-row as solid-tsx
---
import { Show } from "solid-js";

export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

type WeftKey = {
  key: string;
  target: unknown;
  currentTarget: { parentElement: HTMLElement | null };
  preventDefault(): void;
};

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e: WeftKey, fire: () => void): void {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Users">
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-name" scope="col">Name</th>
          ),
        ];
        const _rows = [
          (
            <tr data-weft-id="row-ana" aria-selected={String(_on(props.data?.anaSelected))} tabindex={0} onClick={() => _act(props.actions, { id: "row-ana", action: "users.select" })} onKeyDown={(_e) => _press(_e, () => _act(props.actions, { id: "row-ana", action: "users.select" }))}>
              <td data-weft-id="cell-ana">Ana</td>
            </tr>
          ),
        ];
        return (
          <table data-weft-id="users" aria-label="Users">
            <Show when={_cols.length > 0}>
              <thead>
                <tr>
                  {_cols}
                </tr>
              </thead>
            </Show>
            <Show when={_rows.length > 0}>
              <tbody>
                {_rows}
              </tbody>
            </Show>
          </table>
        );
      })()}
    </main>
  );
}
